searchterminal.txt
Script started on Wednesday 13 September 2017 05:51:25 AM IST
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mlsgit remote -v[6Plogremote[3Plogcd recipes..[Kgit push origin2 master[Kremote -v[K add origin2 git@github.com:Shubham1304/reflections.git[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[K -vadd origin2add remote[C[C[C[C[C[C[C[C[9Premote -vorigin[C[C[C[6Plogpush origin masterls[Kgit push origin2 master[8Patom paneer.txt~[2Pcat paneer.txtls[Ktouch paneer.txt[2Pcat[C[C[C[C[C[C[C[C[C[C[C[2@touch[C[C[C[C[C[C[C[C[C[C[Cls[Kcat paneer.txtatom paneer.txt~[Kgit push origin2 masterls[Kgit push origin masterlog[Korigin -vremote[C[C[Cadd remote origin2remote add[C[C[C[C[C[C[C[C-v[K[K add origin2 git@github.com:Shubham1304/reflections.git[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[K -v[5Ppush origin2 mastercd ..[Krecipes[3Pgit logremote[3Plogremote -vls[K[Klsgit remote -v[6Plogremote -vls[K[Kpythin3 [K[K[K[Kon [K3 searc[K[Kch [Kfromterminal.py
python3: can't open file 'seachfromterminal.py': [Errno 2] No such file or directory
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mls
main2.py  main3.py  main.py  README.md	searchfromterminal.py  searchterminal.txt
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mlspython3 seachfromterminal.py[Crchfromterminal.py
  File "searchfromterminal.py", line 40
    print name_box
    ^
IndentationError: Missing parentheses in call to 'print'
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mpython3 searchfromterminal.py
  File "searchfromterminal.py", line 40
    print (name_box)
    ^
IndentationError: unexpected indent
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mpython3 searchfromterminal.py
Enter search querygames
None
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mpython3 searchfromterminal.py
Enter search querygames
None
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mpython3 searchfromterminal.py
Enter search querygames
[]
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mpython3 searchfromterminal.py
  File "searchfromterminal.py", line 39
    for name in name_box
                       ^
SyntaxError: invalid syntax
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mpython3 searchfromterminal.py
Enter search querygames
[]
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mpython3 searchfromterminal.py[Kpython3 searchfromterminal.py
Enter search querygames
[]
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mgit add[K[K[Kstatus
On branch master
Changes not staged for commit:
  (use "git add <file>..." to update what will be committed)
  (use "git checkout -- <file>..." to discard changes in working directory)

	[31mmodified:   searchfromterminal.py[m

Untracked files:
  (use "git add <file>..." to include in what will be committed)

	[31msearchterminal.txt[m

no changes added to commit (use "git add" and/or "git commit -a")
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mgit add *
[0;35mshubham[0;32m (master +)[0;34m webscrapping $ [0mgit commit -m [C " " [1@T[1@h[1@e[1@ [1@o[1@n[1@e[1@ [1@h[1P[1@w[1@h[1@e[1@r[1@e[1@ [1@[[1@][1P[1P[1@i[1@m[1P[1P[1@i[1@ [1@a[1@m[1@ [1@n[1@o[1@t[1@ [1@a[1@b[1@l[1@e[1@ [1@t[1@o[1@ [1@s[1@e[1@a[1@c[1@r[1@h[1@ [1@d[1@i[1@v[1@ [1@t[1@a[1@g[1@ [1@i[1@n[1@ [1@w[1@e[1@b[1@p[1@a[1@g[1@e[1@.[1@ [1@I[1@t[1@ [1@s[1@h[1@o[1@w[1@s[1@ [1@[[1@][1@ [1@i[1@n[1@ [1@o[1@u[1@t[1@p[1@u[1@t[C
[master 313d4c7] The one where i am not able to seacrh div tag in webpage. It shows [] in output
 2 files changed, 4 insertions(+), 6 deletions(-)
 create mode 100644 searchterminal.txt
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mgit remote
origin
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mgit push origin master
Username for 'https://github.com': Shubham1304
Password for 'https://Shubham1304@github.com': 
Counting objects: 4, done.
Delta compression using up to 4 threads.
Compressing objects:  33% (1/3)   Compressing objects:  66% (2/3)   Compressing objects: 100% (3/3)   Compressing objects: 100% (3/3), done.
Writing objects:  25% (1/4)   Writing objects:  50% (2/4)   Writing objects:  75% (3/4)   Writing objects: 100% (4/4)   Writing objects: 100% (4/4), 467 bytes | 0 bytes/s, done.
Total 4 (delta 2), reused 0 (delta 0)
remote: Resolving deltas:   0% (0/2)   [Kremote: Resolving deltas:  50% (1/2)   [Kremote: Resolving deltas: 100% (2/2)   [Kremote: Resolving deltas: 100% (2/2), completed with 2 local objects.[K
To https://github.com/Shubham1304/webscrapping.git
   71e6ccd..313d4c7  master -> master
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mgit push origin master[12Premotecommit -m "The one where i am not able to seacrh div tag in webpage. It shows [] in output" [C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[Cadd *[Kstatuspython3 searchfromterminal.py
Enter search querygamed
Traceback (most recent call last):
  File "searchfromterminal.py", line 37, in <module>
    name_box = soup.find("div", attrs={ "class" : "rc" }).find_all('h3')
AttributeError: 'NoneType' object has no attribute 'find_all'
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mpython3 searchfromterminal.py
Enter search querygames
None
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mpython3 searchfromterminal.py
Enter search querygames
Traceback (most recent call last):
  File "searchfromterminal.py", line 38, in <module>
    name = name_box.text.strip()
AttributeError: 'NoneType' object has no attribute 'text'
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mpython3 searchfromterminal.py
Enter search querygames
Traceback (most recent call last):
  File "searchfromterminal.py", line 38, in <module>
    name = name_box.text
AttributeError: 'NoneType' object has no attribute 'text'
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mgit status
On branch master
Changes not staged for commit:
  (use "git add <file>..." to update what will be committed)
  (use "git checkout -- <file>..." to discard changes in working directory)

	[31mmodified:   searchfromterminal.py[m
	[31mmodified:   searchterminal.txt[m

no changes added to commit (use "git add" and/or "git commit -a")
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mgit add *
[0;35mshubham[0;32m (master +)[0;34m webscrapping $ [0mgit commit -m ""T"h"e" "o"n"e"[1P"[1P"[1P"f"i"n"a"l" "o"n"e" "w"h"e"r"e" "i"[1P"I" "c"a"n"t" "[1P"[1P"'"t" "u"n"d"e"r"s"t"a"n"d" "t"h"a" "e"r"r"o"r" ":"/"[C
[master 87d431c] The final one where I can't understand tha error :/
 2 files changed, 52 insertions(+), 18 deletions(-)
[0;35mshubham[0;32m (master)[0;34m webscrapping $ [0mgit push otrigin [K[K[K[K[K[K[Krigin master
Username for 'https://github.com': Shubham1304
Password for 'https://Shubham1304@github.com': 
Counting objects: 4, done.
Delta compression using up to 4 threads.
Compressing objects:  25% (1/4)   Compressing objects:  50% (2/4)   Compressing objects:  75% (3/4)   Compressing objects: 100% (4/4)   Compressing objects: 100% (4/4), done.
Writing objects:  25% (1/4)   Writing objects:  50% (2/4)   Writing objects:  75% (3/4)   Writing objects: 100% (4/4)   Writing objects: 100% (4/4), 1.32 KiB | 0 bytes/s, done.
Total 4 (delta 2), reused 0 (delta 0)
remote: Resolving deltas:   0% (0/2)   [Kremote: Resolving deltas:  50% (1/2)   [Kremote: Resolving deltas: 100% (2/2)   [Kremote: Resolving deltas: 100% (2/2), completed with 2 local objects.[K
To https://github.com/Shubham1304/webscrapping.git
   313d4c7..87d431c  master -> master
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mgit stau[Ktus
On branch master
Changes not staged for commit:
  (use "git add <file>..." to update what will be committed)
  (use "git checkout -- <file>..." to discard changes in working directory)

	[31mmodified:   searchterminal.txt[m

no changes added to commit (use "git add" and/or "git commit -a")
[0;35mshubham[0;32m (master *)[0;34m webscrapping $ [0mexit
exit

Script done on Wednesday 13 September 2017 06:28:40 AM IST
